# trackem

./: motmot.trackem-0.5.1.tar.gz.delta  motmot.trackem-0.5.1.tar.gz.id  motmot.trackem-0.5.tar.gz.delta  motmot.trackem-0.5.tar.gz.id  setup.py  stdeb.cfg
contrib/trackem_ros/: .gitignore  CMakeLists.txt  manifest.xml  package.xml
contrib/trackem_ros/launch/: pcloud.launch
contrib/trackem_ros/msg/: MTCalPoint.msg  MTCalPoints.msg  MTPoint.msg  MTPoints.msg
contrib/trackem_ros/nodes/: calecho.py  cloudecho.py  forward.py  forwardcal.py
motmot.trackem.egg-info/: stdeb.cfg
motmot/trackem/: readTrackemOutputIntoMatlab.m  trackem.py  trackem.xrc
